deployments/pathweb/imaginary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imaginary
  namespace: home-network
  labels:
    app.kubernetes.io/name: imaginary
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: imaginary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: imaginary
    spec:
      # runtimeClassName: gvisor
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node-group
                    operator: In
                    values: [baldric]
              weight: 50
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: imaginary
                topologyKey: kubernetes.io/hostname
              weight: 50
      containers:
      - name: imaginary
        image: h2non/imaginary:latest
        args: [-enable-url-source, -concurrency, "50"]
        ports:
        - containerPort: 9000
          name: http
